# CustomNotification-bot

./: README.md  TGChatDownloader.py
CustomNotification/: CustomNot.py  db.db  tst.py
CustomNotificationBot/: CustomNot.py  config.py  db.db  requirements.txt  valuts.py
Micro_bot/: Micro_bot.py
tgbot_ath/: Links.xlsx  Notes.xlsx  Origin.txt  TorSearch.py  Tsearch2.py  athembot.py  bot.spec  help.txt  instaPy.py  links.txt  nohup.out  prp.py  pyproject.toml  t1.py  t4.txt  testexcel.py  torrse.py  valuts.py
