[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
pytz = "^2022.1"
telebot = "^0.0.4"
Telethon = "^1.24.0"
we-get = "^1.0.1"
openpyxl = "^3.0.10"
aiogram = "^2.21"
pycbrf = "^1.1.0"
requests = "^2.28.0"
bs4 = "^0.0.1"
Flask = "^2.1.2"
timer = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"